--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:debug": "node --inspect=0.0.0.0:9229 -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --watchAll --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
@@ -88,6 +88,10 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
