--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,10 @@
     "baseUrl": "./",
     "incremental": true,
     "moduleResolution": "node",
+    "paths": {
+      "base-extensions/*": [
+        "src/base-extensions/*"
+      ]
+    }
   }
 }
